@@ -66,6 +66,7 @@ dpkg (1.10) unstable; urgency=low
     dpkg-checkbuilddeps
   * Update default ignore expression in dpkg-source to also match *~ and
     *.swp in subdirs. Closes: Bug#127458
+  * Handle errors when verifying md5sums. Closes: Bug#102367
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
