@@ -1,3 +1,6 @@
+Thu Jan  3 15:20:25 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/md5sum.c: add error handling to do_check
 Wed Jan  2 16:08:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.pl: Update default ignore expression to also
